# cmake_minimum_required(VERSION <specify CMake version here>)
project(roadtocpp)

set(CMAKE_CXX_STANDARD 11)

#add_executable(roadtocpp first.c myfirst.cpp myfirst.h dynamic/dynamic.cpp)
add_executable(myfirst myfirst.cpp)
add_executable(question187 question187.cpp)
add_executable(first first.c)
add_executable(function function.cpp function.h)
add_executable(question162 question162.cpp)
add_executable(question166 question166.cpp)
add_executable(question206 question206.cpp)
add_executable(question216 question216.cpp)
add_executable(question221 question221.cpp)
add_executable(leetcode leetcode.cpp)
add_executable(question229 question229.cpp question229.h)