# cmake_minimum_required(VERSION <specify CMake version here>)
cmake_minimum_required(VERSION 3.15)

project(roadtocpp)

set(CMAKE_CXX_STANDARD 11)

#add_executable(roadtocpp first.c myfirst.cpp myfirst.h dynamic/dynamic.cpp)
add_executable(myfirst myfirst.cpp)
add_executable(question187 question187.cpp)
add_executable(first first.c)
add_executable(question1305 question1305.cpp)
add_executable(function function.cpp hearders/function.h)
add_executable(question162 question162.cpp)
add_executable(question166 question166.cpp)
add_executable(question206 question206.cpp)
add_executable(question216 question216.cpp)
add_executable(question221 question221.cpp)
add_executable(question229 question229.cpp question229.h)
add_executable(question230 question230.cpp)
add_executable(question236 question236.cpp question236.h)
add_executable(question147 question147.cpp question147.h)
add_executable(question241 question241.cpp question241.h)
add_executable(question287 question287.cpp)
add_executable(question74 question74.cpp)
add_executable(question306 question306.cpp)
add_executable(question307 question307.cpp)
add_executable(question436 question436.cpp)
add_executable(deleteBSTnode deleteBSTnode.cpp)
add_executable(arraypointer arraypointer.cpp)
add_executable(learncpp learncpp.cpp learncpp.h)
add_executable(makeTree makeTree.cpp makeTree.h)
add_executable(pointerTester pointerTester.cpp)
add_executable(question412 question412.cpp)
add_executable(question1111 question1111.cpp)
add_executable(questions1112 questions1112.cpp)
add_executable(question949 question949.cpp)
add_executable(vectortester vectortester.cpp)
add_executable(question220 question220.cpp)
add_executable(question459 question459.cpp)
add_executable(question763 question763.cpp)
add_executable(question835 question835.cpp)
add_executable(question1022 question1022.cpp)
add_executable(question165 question165.cpp)


